--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,8 +13,16 @@
   <body>
     <h1><%= campground.title %></h1>
     <h2><%= campground.location %></h2>
+    <div><a href="/campgrounds/<%= campground._id %>/edit ">Edit</a></div>
+    <div>
+      <form
+        action="/campgrounds/<%= campground._id %>?_method=DELETE"
+        method="POST"
+      >
+        <button>Delete</button>
+      </form>
+    </div>
     <footer>
-      <a href="/campgrounds/<%= campground._id %>/edit ">Edit</a>
       <a href="/campgrounds">All Campgrounds</a>
     </footer>
   </body>
