--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,25 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Campground</title>
-  </head>
-  <body>
+<% layout('layouts/boilerplate.ejs') %>
+<div class="row">
+  <h1 class="text-center">New Campground</h1>
+  <div class="col-6 offset-3">
     <form action="/campgrounds" method="POST">
-      <div>
-        <label for="title">Title</label>
-        <input type="text" id="title" name="campground[title]" />
-        <!-- group things under campground -->
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
+        <input
+          class="form-control"
+          type="text"
+          id="title"
+          name="campground[title]"
+        />
+        <!-- xxx[]: group things under campground -->
       </div>
-      <div>
-        <label for="location">Location</label>
-        <input type="text" id="location" name="campground[location]" />
+
+      <div class="mb-3">
+        <label class="form-label" for="location">Location</label>
+        <input
+          class="form-control"
+          type="text"
+          id="location"
+          name="campground[location]"
+        />
         <!-- input id <-> label for -->
       </div>
-      <button>Add Campground</button>
+
+      <div class="mb-3">
+        <label class="form-label" for="image">Image Url</label>
+        <input
+          class="form-control"
+          type="text"
+          id="image"
+          name="campground[image]"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="price">Price</label>
+        <div class="input-group">
+          <span class="input-group-text" id="price-dollarsign">$</span>
+          <input type="text" class="form-control" placeholder="CAD" aria-label="price" aria-describedby="price-dollarsign" id="price" name="campground[price]">
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea
+          class="form-control"
+          type="text"
+          id="description"
+          name="campground[description]"
+        /></textarea>
+      </div>
+
+      <div class="mb-3">
+        <button class="btn btn-success">Add Campground</button>
+        <button class="btn btn-light">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+          </svg> Back
+        </button>
+      </div>
+
+      <div class="mb-3">
+        
+      </div>
     </form>
-    <a href="/campgrounds">All Campgrounds</a>
-  </body>
-</html>
+  
+  </div>
+</div>
