--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,29 +1,4 @@
 <% layout('layouts/boilerplate.ejs') %>
-<h1>Edit Campground</h1>
-<form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
-  <div>
-    <label for="title">Title</label>
-    <input
-      type="text"
-      id="title"
-      name="campground[title]"
-      value="<%= campground.title %> "
-    />
-  </div>
-  <div>
-    <label for="location">Location</label>
-    <input
-      type="text"
-      id="location"
-      name="campground[location]"
-      value="<%= campground.location %>"
-    />
-  </div>
-  <button>Update</button>
-</form>
-<a href="/campgrounds/<%= campground._id %> ">Back</a>
-
-
 
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
@@ -36,7 +11,7 @@
           type="text"
           id="title"
           name="campground[title]"
-          value="<%= campground.title %>""
+          value="<%= campground.title %>"
         />
         <!-- xxx[]: group things under campground -->
       </div>
@@ -81,20 +56,17 @@
           name="campground[description]"
         /><%= campground.description %> </textarea>
       </div>
-
+    
       <div class="mb-3">
-        <button class="btn btn-success">Add Campground</button>
-        <button class="btn btn-light">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
-          </svg> Back
-        </button>
-      </div>
-
-      <div class="mb-3">
-        
+        <button class="btn btn-success">Update Campground</button>
       </div>
     </form>
+  <div class="mb-3 d-inline">
+    <form action="/campgrounds/<%= campground._id %>">
+    <button class="btn btn-light">Back</button>
+    </form>
+  </div>
+    
   
   </div>
 </div>
