--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,7 @@
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form">
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -12,9 +12,14 @@
           id="title"
           name="campground[title]"
           value="<%= campground.title %>"
+          required
         />
+        <div class="invalid-feedback">
+          Please enter a campground title.
+        </div>
         <!-- xxx[]: group things under campground -->
       </div>
+      
 
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
@@ -24,7 +29,11 @@
           id="location"
           name="campground[location]"
           value="<%= campground.location %>"
+          required
         />
+        <div class="invalid-feedback">
+          Please enter a campground location.
+        </div>
         <!-- input id <-> label for -->
       </div>
 
@@ -36,14 +45,21 @@
           id="image"
           name="campground[image]"
           value="<%= campground.image %>"
+          required
         />
+        <div class="invalid-feedback">
+          Please enter a image link.
+        </div>
       </div>
 
       <div class="mb-3">
         <label class="form-label" for="price">Price</label>
         <div class="input-group">
           <span class="input-group-text" id="price-dollarsign">$</span>
-          <input type="text" class="form-control" placeholder="CAD" aria-label="price" aria-describedby="price-dollarsign" id="price" name="campground[price]" value="<%= campground.price %>">
+          <input type="text" class="form-control" placeholder="CAD" aria-label="price" aria-describedby="price-dollarsign" id="price" name="campground[price]" value="<%= campground.price %>" required>
+          <div class="invalid-feedback">
+            Please enter a price.
+          </div>
         </div>
       </div>
 
@@ -54,7 +70,11 @@
           type="text"
           id="description"
           name="campground[description]"
+          required
         /><%= campground.description %> </textarea>
+        <div class="invalid-feedback">
+          Please enter descriptions for this camp.
+        </div>
       </div>
     
       <div class="mb-3">
