--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
   <h1 class="text-center">New Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds" method="POST">
+    <form action="/campgrounds" method="POST" novalidate class="validated-form">
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -10,6 +10,7 @@
           type="text"
           id="title"
           name="campground[title]"
+          required
         />
         <!-- xxx[]: group things under campground -->
       </div>
@@ -21,7 +22,9 @@
           type="text"
           id="location"
           name="campground[location]"
+          required
         />
+        
         <!-- input id <-> label for -->
       </div>
 
@@ -32,6 +35,7 @@
           type="text"
           id="image"
           name="campground[image]"
+          required
         />
       </div>
 
@@ -39,7 +43,7 @@
         <label class="form-label" for="price">Price</label>
         <div class="input-group">
           <span class="input-group-text" id="price-dollarsign">$</span>
-          <input type="text" class="form-control" placeholder="CAD" aria-label="price" aria-describedby="price-dollarsign" id="price" name="campground[price]">
+          <input type="text" class="form-control" placeholder="CAD" aria-label="price" aria-describedby="price-dollarsign" id="price" name="campground[price]" required>
         </div>
       </div>
 
@@ -49,7 +53,7 @@
           class="form-control"
           type="text"
           id="description"
-          name="campground[description]"
+          name="campground[description]" required
         /></textarea>
       </div>
 
@@ -69,3 +73,4 @@
   
   </div>
 </div>
+
