--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,13 +2,13 @@
 
 <div class="row">
   <div class="col-6 offset-3">
-    <div class="card">
+    <div class="card mb-3">
       <img
         src="<%= campground.image %>"
         class="card-img-top"
         alt="image failed"
       />
-      <div class="card-body mb-3">
+      <div class="card-body">
         <h5 class="card-title"><%= campground.title %></h5>
       </div>
       <ul class="list-group list-group-flush">
@@ -19,7 +19,7 @@
       <div class="card-body">
         <a
           href="/campgrounds/<%= campground._id %>/edit"
-          class="card-link btn btn-warning"
+          class="card-link btn btn-success"
           >Edit</a
         >
         <form
@@ -27,7 +27,7 @@
           action="/campgrounds/<%= campground._id %>?_method=DELETE"
           method="POST"
         >
-          <button class="btn btn-danger">Delete</button>
+          <button class="btn btn-light">Delete</button>
         </form>
       </div>
     </div>
