user Authorization done

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,6 +26,7 @@
         <a class="nav-link" href="/register">Register</a>
         <a class="nav-link" href="/login">Login</a>
         <% } else { %>
+        <span class="navbar-text">Hello, <%= currentUser.username %></span>
         <a class="nav-link" href="/logout">Logout</a>
         <% } %>
       </div>
