--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,9 +13,13 @@
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item text-muted"><%= campground.location %></li>
+        <li class="list-group-item">
+          Created By: <%= campground.author.username %>
+        </li>
         <li class="list-group-item">Price: $<%= campground.price %>CAD</li>
         <li class="list-group-item"><%= campground.description %></li>
       </ul>
+      <% if (currentUser && campground.author.equals(currentUser)) { %>
       <div class="card-body">
         <a
           href="/campgrounds/<%= campground._id %>/edit"
@@ -30,6 +34,7 @@
           <button class="btn btn-light">Delete</button>
         </form>
       </div>
+      <% } %>
       <div class="card-footer text-muted">2 days ago</div>
     </div>
   </div>
