--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -10,7 +10,7 @@
       name="username"
       required
     />
-    <div class="valid-feedback">Looks Good!</div>
+    <div class="valid-feedback">Username found</div>
   </div>
   <div class="mb-3">
     <label class="form-label" for="password">password</label>
@@ -21,7 +21,7 @@
       name="password"
       required
     />
-    <div class="valid-feedback">Looks Good!</div>
+    <div class="valid-feedback">Password matches</div>
   </div>
   <button class="btn btn-success">Login</button>
 </form>
