--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -39,6 +39,7 @@
     </div>
   </div>
 
+  <% if (currentUser) { %>
   <div class="col-6">
     <h2>Leave a Review:</h2>
     <form
@@ -72,7 +73,7 @@
       </div>
       <button class="btn btn-success">Submit</button>
     </form>
-    <% for(let review of campground.reviews) { %>
+    <% } %> <% for(let review of campground.reviews) { %>
     <div class="card mb-3">
       <div class="card-body">
         <h5 class="card-title">Rating: <%= review.rating %></h5>
