image upload/delete/edit from webpage/mongoDB/cloud done

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -113,7 +113,7 @@
           id="rating"
         />
       </div> -->
-      <div class="mb-3">
+      <div>
         <fieldset class="starability-slot">
           <!-- <legend>First rating:</legend> -->
           <input
