--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -38,18 +38,8 @@
       </div>
 
       <div class="mb-3">
-        <label class="form-label" for="image">Image Url</label>
-        <input
-          class="form-control"
-          type="text"
-          id="image"
-          name="campground[image]"
-          value="<%= campground.image %>"
-          required
-        />
-        <div class="invalid-feedback">
-          Please enter a image link.
-        </div>
+        <label class="form-label" for="image">Add Images</label>
+        <input class="form-control" type="file" name="image" id="image" multiple>
       </div>
 
       <div class="mb-3">
@@ -75,6 +65,15 @@
         <div class="invalid-feedback">
           Please enter descriptions for this camp.
         </div>
+      </div>
+      <div class="mb-3">
+        <% campground.image.forEach(function(img, i) { %>
+          <img src="<%= img.thumbnail %> " class="img-thumbnail" alt="">
+          <div class="form-check-inline">
+            <input type="checkbox" id="image-<%= i %>" name="deleteImages[]" value="<%= img.filename %>">
+          </div>
+          <label for="image-<%= i %>">Delete?</label>
+          <% }) %> 
       </div>
     
       <div class="mb-3">
